[gd_scene load_steps=56 format=3 uid="uid://cr84apny64emt"]

[ext_resource type="Script" path="res://PreHistory/Characters/Anakin/Anakin.gd" id="1_fawxo"]
[ext_resource type="Texture2D" uid="uid://df3mpxmpmi6n3" path="res://Player/Shadow.png" id="2_o7gs7"]
[ext_resource type="Texture2D" uid="uid://3r5dgr15qkpl" path="res://PreHistory/Characters/Anakin/IdleBack.png" id="3_u0rvt"]
[ext_resource type="Texture2D" uid="uid://bvvx7tphrp31g" path="res://PreHistory/Characters/Anakin/IdleFront.png" id="4_a1fq4"]
[ext_resource type="Texture2D" uid="uid://dxampheweavkb" path="res://PreHistory/Characters/Anakin/IdleLeft.png" id="5_mllmw"]
[ext_resource type="Texture2D" uid="uid://ctyhabx38jios" path="res://PreHistory/Characters/Anakin/IdleRight.png" id="6_2yfd6"]
[ext_resource type="Texture2D" uid="uid://do22fkk7tja6t" path="res://PreHistory/Characters/Anakin/RunBack.png" id="7_8g7s0"]
[ext_resource type="Texture2D" uid="uid://d24lwxhm0ltei" path="res://PreHistory/Characters/Anakin/RunFront.png" id="8_pnt18"]
[ext_resource type="Texture2D" uid="uid://fynhiq5la7aw" path="res://PreHistory/Characters/Anakin/RunLeft.png" id="9_mr2hc"]
[ext_resource type="Texture2D" uid="uid://cllvxkvvu3ymu" path="res://PreHistory/Characters/Anakin/RunRight.png" id="10_ah6dn"]
[ext_resource type="Texture2D" uid="uid://l463qp38h4p" path="res://PreHistory/Characters/Anakin/WalkBack.png" id="11_8xj2b"]
[ext_resource type="Texture2D" uid="uid://cichrkwp66hhc" path="res://PreHistory/Characters/Anakin/WalkFront.png" id="12_otlji"]
[ext_resource type="Texture2D" uid="uid://cn2xk4ylns5y2" path="res://PreHistory/Characters/Anakin/WalkLeft.png" id="13_gwf7l"]
[ext_resource type="Texture2D" uid="uid://divkte5c8fmxx" path="res://PreHistory/Characters/Anakin/WalkRight.png" id="14_nfoam"]

[sub_resource type="CircleShape2D" id="CircleShape2D_n1diu"]
radius = 7.0

[sub_resource type="Animation" id="Animation_p3q83"]
resource_name = "IdleBack"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_u0rvt")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6, 1, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 1]
}

[sub_resource type="Animation" id="Animation_uvfq3"]
resource_name = "IdleFront"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_a1fq4")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8, 1.3, 1.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_w8ioy"]
resource_name = "IdleLeft"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_mllmw")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4, 0.9, 1.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 1]
}

[sub_resource type="Animation" id="Animation_yj20t"]
resource_name = "IdleRight"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_2yfd6")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4, 0.9, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 1]
}

[sub_resource type="Animation" id="Animation_raa5l"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_iqv7s"]
resource_name = "RunBack"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("7_8g7s0")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_40kl2"]
resource_name = "RunFront"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("8_pnt18")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_nlurn"]
resource_name = "RunLeft"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("9_mr2hc")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_vl2sd"]
resource_name = "RunRight"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("10_ah6dn")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_ygi7p"]
resource_name = "WalkBack"
length = 1.2
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("11_8xj2b")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1.05),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_wvvjv"]
resource_name = "WalkFront"
length = 0.9
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("12_otlji")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_kpamr"]
resource_name = "WalkLeft"
length = 0.9
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("13_gwf7l")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [5, 4, 3, 2, 1, 0]
}

[sub_resource type="Animation" id="Animation_ylbfs"]
resource_name = "WalkRight"
length = 0.9
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("14_nfoam")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sddr2"]
_data = {
"IdleBack": SubResource("Animation_p3q83"),
"IdleFront": SubResource("Animation_uvfq3"),
"IdleLeft": SubResource("Animation_w8ioy"),
"IdleRight": SubResource("Animation_yj20t"),
"RESET": SubResource("Animation_raa5l"),
"RunBack": SubResource("Animation_iqv7s"),
"RunFront": SubResource("Animation_40kl2"),
"RunLeft": SubResource("Animation_nlurn"),
"RunRight": SubResource("Animation_vl2sd"),
"WalkBack": SubResource("Animation_ygi7p"),
"WalkFront": SubResource("Animation_wvvjv"),
"WalkLeft": SubResource("Animation_kpamr"),
"WalkRight": SubResource("Animation_ylbfs")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pskbo"]
animation = &"IdleBack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8cinl"]
animation = &"IdleFront"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vgrqa"]
animation = &"IdleRight"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_f6rr2"]
animation = &"IdleLeft"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_o5c56"]
blend_point_0/node = SubResource("AnimationNodeAnimation_pskbo")
blend_point_0/pos = Vector2(0, -1.1)
blend_point_1/node = SubResource("AnimationNodeAnimation_8cinl")
blend_point_1/pos = Vector2(0, 1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_vgrqa")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_f6rr2")
blend_point_3/pos = Vector2(-1, 0)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_wbg7s"]
animation = &"RunFront"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_scs7f"]
animation = &"RunBack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fcq2v"]
animation = &"RunRight"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_adnqq"]
animation = &"RunLeft"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_rv7od"]
blend_point_0/node = SubResource("AnimationNodeAnimation_wbg7s")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_scs7f")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_fcq2v")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_adnqq")
blend_point_3/pos = Vector2(-1, 0)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_m2x5f"]
animation = &"WalkFront"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_gi68n"]
animation = &"WalkBack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_px2lj"]
animation = &"WalkRight"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7lc4g"]
animation = &"WalkLeft"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_oql8w"]
blend_point_0/node = SubResource("AnimationNodeAnimation_m2x5f")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_gi68n")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_px2lj")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_7lc4g")
blend_point_3/pos = Vector2(-1, 0)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_44vm1"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ktdi5"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_mqcm6"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_74khn"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_e2nt8"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_6h8wl"]
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_o5c56")
states/Idle/position = Vector2(306.667, 100.222)
states/Run/node = SubResource("AnimationNodeBlendSpace2D_rv7od")
states/Run/position = Vector2(305.334, 164.667)
states/Walk/node = SubResource("AnimationNodeBlendSpace2D_oql8w")
states/Walk/position = Vector2(300, 35.3333)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_44vm1"), "Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_ktdi5"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_mqcm6"), "Run", "Idle", SubResource("AnimationNodeStateMachineTransition_74khn"), "Idle", "Run", SubResource("AnimationNodeStateMachineTransition_e2nt8")]

[sub_resource type="CircleShape2D" id="CircleShape2D_gql05"]
radius = 8.24621

[sub_resource type="Animation" id="Animation_1hfkc"]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Shadow:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_o7gs7")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Shadow:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Shadow:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_bqgsw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Shadow:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_hgsva"]
resource_name = "Running"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Shadow:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_o7gs7")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Shadow:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Shadow:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qcash"]
_data = {
"Idle": SubResource("Animation_1hfkc"),
"RESET": SubResource("Animation_bqgsw"),
"Running": SubResource("Animation_hgsva")
}

[node name="Anakin" type="CharacterBody2D"]
z_index = 2
collision_layer = 65536
collision_mask = 35
script = ExtResource("1_fawxo")
interaction = Array[String](["Olá!", "As picadas de abelha me fazem muito mau. Posso ir coletar frutas perto do rio por enquanto?"])

[node name="Shadow" type="Sprite2D" parent="."]
position = Vector2(-1, -36)
scale = Vector2(2, 2)
texture = ExtResource("2_o7gs7")
hframes = 8
frame = 1

[node name="texture" type="Sprite2D" parent="."]
position = Vector2(0, -39)
scale = Vector2(2, 2)
texture = ExtResource("4_a1fq4")
hframes = 5
frame = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, -10)
shape = SubResource("CircleShape2D_n1diu")

[node name="Navigation" type="Node2D" parent="."]

[node name="RecalculateTimer" type="Timer" parent="Navigation"]
wait_time = 0.2

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="Navigation"]
path_desired_distance = 40.0
target_desired_distance = 20.0
path_postprocessing = 1
avoidance_enabled = true
radius = 8.0
max_neighbors = 5
debug_path_custom_color = Color(1, 0.262745, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_sddr2")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_6h8wl")
anim_player = NodePath("../AnimationPlayer")
parameters/Idle/blend_position = Vector2(-0.00968522, 0.993909)
parameters/Run/blend_position = Vector2(-0.542435, 0.287791)
parameters/Walk/blend_position = Vector2(-0.0460048, 0.658883)

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-2, -10)
shape = SubResource("CircleShape2D_gql05")

[node name="ShadowAnim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qcash")
}

[connection signal="velocity_computed" from="Navigation/NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
